<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:id="@+id/textVal"
        android:gravity="center"
        android:textColor="@color/teal_200"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/userpass" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="Click Here"
        android:textSize="30dp"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"/>



</LinearLayout>